# codeblocks

./: .clang-format  .gitignore  configure.ac
.github/workflows/: build_appimage.yml
debian/: changelog
m4/: acinclude.m4
src/: CodeBlocks_wx32-unix.cbp
src/include/: cbplugin.h  cbproject.h  ccmanager.h  encodingdetector.h  projectloader.h  sdk_events.h
src/plugins/codecompletion/: codecompletion.cpp
src/sdk/: cbeditor.cpp  cbproject.cpp  cbstyledtextctrl.cpp  ccmanager.cpp  compiler.cpp  compilercommandgenerator.cpp  compilerfactory.cpp  editorbase.cpp  editorcolourset.cpp  editormanager.cpp  encodingdetector.cpp  globals.cpp  logmanager.cpp  pluginmanager.cpp  projectbuildtarget.cpp  projectfile.cpp  projectmanager.cpp  sdk_events.cpp
src/sdk/wxscintilla/: Makefile.am
src/sdk/wxscintilla/include/wx/: wxscintilla.h
src/sdk/wxscintilla/src/: PlatWX.cpp  PlatWX.h  ScintillaWX.cpp  ScintillaWX.h  wxscintilla.cpp
src/sdk/wxscintilla/src/scintilla/include/: Platform.h  SciLexer.h  Scintilla.h  Scintilla.iface
src/sdk/wxscintilla/src/scintilla/lexers/: LexCPP.cxx  LexTACL.cxx
src/sdk/wxscintilla/src/scintilla/lexlib/: LexAccessor.h
src/sdk/wxscintilla/src/scintilla/src/: CallTip.cxx  CallTip.cxx.rej  Catalogue.cxx  CellBuffer.cxx  CellBuffer.cxx.rej  CellBuffer.h  CellBuffer.h.rej  Document.cxx  Document.h  Editor.cxx  Indicator.cxx  Indicator.cxx.rej  MarginView.cxx  Position.h  RunStyles.cxx  RunStyles.cxx.rej  RunStyles.h  RunStyles.h.rej  ScintillaBase.cxx  UniConversion.h
src/src/: app.cpp  infopane.cpp  main.cpp  projectmanagerui.cpp
(+91 files in other folders)
